--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -104,9 +104,9 @@
 			</div>
 		</div>
 
-		<div class="row post-submit-div-remote-picture">
-			<div class="remote-picture-container"></div>
-			<span id="dismiss-remote-picture">X</span>
+		<div class="row post-submit-div-picture-remote">
+			<div class="picture-remote-container"></div>
+			<span id="dismiss-picture-remote">X</span>
 		</div>
 
 		<div class="post-submit-div-submit">
