--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -105,8 +105,11 @@
 		</div>
 
 		<div class="row post-submit-div-picture-remote">
+			<span class="post-submit-div-picture-remote-overlay"></span>
 			<div class="picture-remote-container"></div>
-			<span id="dismiss-picture-remote">X</span>
+			<span class="dialog__button-close" id="dismiss-picture-remote">
+				<i class="fa fa-times"></i>
+			</span>
 		</div>
 
 		<div class="post-submit-div-submit">
