Round corners only on top

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1355,7 +1355,8 @@ div#post-comment-reply-container
 	margin: 20px auto
 	max-height: 200px
 	overflow: hidden
-	+border-radius(3px)
+	border-top-left-radius: 3px
+	border-top-right-radius: 3px
 
 	& img
 		width: 100%
