Add comments count and category for featured items

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -191,6 +191,15 @@ blockquote
 				position: relative
 				display: block
 				font-size: .8em
+				& i
+					padding-left: 2px
+					font-size: .9em
+					top: -1px
+					position: relative
+				& a
+					color: white
+					&:hover
+						text-decoration: underline
 
 		& .post-index-item-rate
 			position: absolute
