--- a/blender-today/application/templates/posts/_macros.html
+++ b/blender-today/application/templates/posts/_macros.html
@@ -56,7 +56,7 @@
 				 {% endif %}>
 				<i class="fa fa-chevron-down"></i>
 			</a>
-			<span class="separator"></span>
+			<span class="separator hidden-xs"></span>
 			<span class="rating" title="Comment Points">
 				{{comment.rating_delta}}
 			</span>
