--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -60,8 +60,8 @@
 		</div>
 
 		<div class="nav-sidebar branding">
-			<a href="{{url_for('index')}}">
-				<img class="nav-sidebar-mug" src="{{url_for('static', filename='images/today_manumug_party_136x136.png')}}"/>
+			<a href="{{url_for('index')}}" title="Blender.Today">
+				<img class="nav-sidebar-mug" src="{{url_for('static', filename='images/today_manumug_136x136.jpg')}}"/>
 			</a>
 			<a href="{{url_for('index')}}"><h3>Blender<small>.</small>Today</h3></a>
 			<p>
