--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -32,8 +32,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 
-		<link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
-		<link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='images/favicon_192x192.png') }}">
+		<link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon_192x192.png') }}">
 
 		{% block header %}
 		{% endblock %}
