Alignment of comment details

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1263,7 +1263,7 @@ div#post-comment-reply-container
 		max-width: 100%
 
 .post-view-comments-item-details
-	display: inline-block
+	display: block
 	clear: both
 	color: lighten($color_text, 30%)
 	font-size: 0.9em
