--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -19,7 +19,7 @@
 		{% if config.USE_ASSETS_CDN %}
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		{% else %}
 		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
