Prepare Grunt for Jade templating

--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -205,16 +205,16 @@
 							{% if not post.user.deleted %}
 								<span class="author-roles">
 									{% if post.user.has_role('dev_core') %}
-										<i class="bf-blender"></i> Blender Core Developer<br/>
+										Blender Core Developer<br/>
 									{% endif %}
 									{% if post.user.has_role('cloud_member') %}
-										<i class="bf-cloud"></i> Blender Cloud Member<br/>
+										Blender Cloud Member<br/>
 									{% endif %}
 									{% if post.user.has_role('network_member') %}
-										<i class="bf-network"></i> Blender Network Member<br/>
+										Blender Network Member<br/>
 									{% endif %}
 									{% if post.user.has_role('bfct_trainer') %}
-										<i class="fa fa-graduation-cap"></i> Blender Foundation Certified Trainer
+										Blender Foundation Certified Trainer
 									{% endif %}
 								</span> <!-- author-roles -->
 							{% endif %}
