--- a/blender-today/application/templates/pages/view.html
+++ b/blender-today/application/templates/pages/view.html
@@ -1,31 +1,20 @@
+
 {% extends 'layout.html' %}
-
 {% block og %}
-	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Blender.Today" />
-	<meta property="og:url" content="{{url_for('index')}}{{url}}" />
-	<meta property="og:image" content="{{ url_for('static', filename='images/favicon_192x192.png') }}" />
-{% endblock %}
-
-{% block page_title %}
-	{{title}} - 
-{% endblock%}
-
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="Blender.Today"/>
+<meta property="og:url" content="{{url_for('index')}}{{url}}"/>
+<meta property="og:image" content="{{ url_for('static', filename='images/favicon_192x192.png') }}"/>{% endblock %}
+{% block page_title %} {{title}} - {% endblock%}
 {% block body %}
 <div class="row">
-   <div class="col-md-9">
-   	<div class="page-view">
-			<h2>{{title}}</h2>
-			<div class="page-view-container">
-				<div class="page-view-content">
-					{{content|safe}}
-				</div>
-			</div>
-		</div> <!-- page-view -->
-   </div> <!-- col-md -->
-   <div class="col-md-3">
-    {% include '_sidebar.html' %}
-   </div> <!-- col-md -->
-</div> <!-- row -->
-{% endblock %}
-
+  <div class="col-md-9">
+    <div class="page-view">
+      <h2>{{title}}</h2>
+      <div class="page-view-container">
+        <div class="page-view-content">{{content|safe}}</div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3">{% include '_sidebar.html' %}</div>
+</div>{% endblock %}
