Port 404 to Jade
gitignore template html files

--- a/blender-today/src/jade/layout.jade
+++ b/blender-today/src/jade/layout.jade
@@ -5,7 +5,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 
-		title {% block page_title %}{% endblock %}Blender Today - Community-driven Blender News
+		title {% block page_title %}{% endblock %}Blender.Today - Community-driven Blender News
 
 		meta(name="keywords", content="news, community, blender, animation, 3d")
 		meta(name="description", content="Community-driven Blender News")
