--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -2206,6 +2206,9 @@ fieldset
 			display: inline-block
 			padding: 0 5px 5px 5px
 
+.whoosh
+	display: block !important
+
 /* Submit Dialog */
 .dialog, .dialog__overlay
 	width: 100%
